updated for new Modifier implementation